--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
       max-height: 100%;
       cursor: pointer;
       border: none;
+      user-drag: none;
+      user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
     }
 
     #overlay {
