--- a/index.html
+++ b/index.html
@@ -294,14 +294,14 @@
     });
 
     // Mobilde çift dokunmayı engelle
-    let lastTouch = 0;
-    overlayImage.addEventListener("touchend", e => {
-      const now = new Date().getTime();
-      if (now - lastTouch <= 300) {
-        e.preventDefault();
-      }
-      lastTouch = now;
-    }, { passive: false });
+    //let lastTouch = 0;
+    //overlayImage.addEventListener("touchend", e => {
+     // const now = new Date().getTime();
+     // if (now - lastTouch <= 300) {
+       // e.preventDefault();
+     // }
+     // lastTouch = now;
+   // }, { passive: false });
 
     document.addEventListener("DOMContentLoaded", () => {
       document.querySelectorAll("img").forEach(img => {
