--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     document.addEventListener("DOMContentLoaded", () => {
       document.querySelectorAll("img").forEach(img => {
         img.addEventListener("contextmenu", e => e.preventDefault());
-        img.addEventListener("touchstart", e => e.preventDefault(), { passive: false });
+        //img.addEventListener("touchstart", e => e.preventDefault(), { passive: false });
       });
     });
   </script>
