--- a/index.html
+++ b/index.html
@@ -136,14 +136,12 @@
 
     #prevBtn {
       left: 20px;
-      top: 50%;
-      transform: translateY(-50%);
+      bottom: 20px;
     }
 
     #nextBtn {
       right: 20px;
-      top: 50%;
-      transform: translateY(-50%);
+      bottom: 20px;
     }
 
     #closeBtn:hover,
