--- a/index.html
+++ b/index.html
@@ -245,17 +245,17 @@
         });
     }
 
-   function preventScroll(e) {
-          e.preventDefault();
-    }
+   //function preventScroll(e) {
+         // e.preventDefault();
+  //  }
 
 
     function showOverlay(index) {
       overlay.style.display = "flex";
       overlay.classList.add("show-controls");
       overlay.classList.remove("hide-controls");
-      document.body.classList.add("no-scroll");
-      document.body.addEventListener("touchmove", preventScroll, { passive: false });
+      //document.body.classList.add("no-scroll");
+     // document.body.addEventListener("touchmove", preventScroll, { passive: false });
       controlsVisible = true;
       currentIndex = index;
       overlayImage.src = `Galeri/${currentAlbum}/${currentImages[index]}`;
@@ -264,8 +264,8 @@
 
     function hideOverlay() {
       overlay.style.display = "none";
-      document.body.classList.remove("no-scroll");
-      document.body.removeEventListener("touchmove", preventScroll);
+      //document.body.classList.remove("no-scroll");
+      //document.body.removeEventListener("touchmove", preventScroll);
     }
 
     // Toggle kontrol görünürlüğü (tıklama)
